# tasker_widget

./: CMakeLists.txt  GpuMonitor.cpp  GpuMonitor.h  README.md  ResourceWidget.cpp  ResourceWidget.h  main.cpp
